Update .Net CLI overview.md

--- a/.Net CLI overview.md
+++ b/.Net CLI overview.md
@@ -1,1 +1,10 @@
+# .Net CLI overview
+
+https://learn.microsoft.com/en-us/dotnet/core/tools/?tabs=netcore2x
+
+# 简介
+
+The .NET command-line interface (CLI) is a cross-platform toolchain for developing, building, running, and publishing .NET applications.
+
+The .NET CLI is included with the .NET SDK. 
 
